<resources>
    <string name="app_name">Covid-19 Survey</string>
    <string name="hadVacc">Have you had Covid-19 vaccination before? *</string>
    <string name="appliedVacc">Choose Applied Vaccine Type: *</string>
    <string name="spinner">Select a vaccine</string>
    <string name="sideEffects">Have you experienced any side effects from Covid-19 vaccination? *</string>
    <string name="multiline">Please explain.</string>
    <string name="thirdVacc">Have you had your 3rd Covid-19 vaccination? *</string>
    <string name="history">Have you had any PCR positive cases or Covid-19 symptoms after 3rd vaccination?
        *</string>

    <string-array name="vaccines_array">
        <item>BionTech</item>
        <item>MODERNA</item>
        <item>Johnson and Johnson</item>
        <item>Astra Zenica</item>
        <item>TURKOVAC</item>
    </string-array>
</resources>