<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="373dp"
        android:layout_height="605dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Name Surname *"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:hint="Name Surname"
                android:inputType="textPersonName"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Birthday *"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="dd/mm/yyyy"
                android:inputType="date"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="City *"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Ankara, ..."
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gender *"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Female" />

                <RadioButton
                    android:id="@+id/nonbinary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Non-binary" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hadVacc"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/vaccYes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Yes" />

                <RadioButton
                    android:id="@+id/vaccNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="No" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appliedVacc"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/spinner"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sideEffects"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/sideEffects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/multiline"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thirdVacc"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/thirdVacc"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/thirdYes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onThirdClicked"
                    android:text="Yes" />

                <RadioButton
                    android:id="@+id/thirdNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onThirdClicked"
                    android:text="No" />
            </RadioGroup>

            <TextView
                android:id="@+id/textViewHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/multiline"
                android:inputType="textMultiLine" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/errorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="#F44336"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/send"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        tools:layout_editor_absoluteX="2dp" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:enabled="true"
        android:text="SEND"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>